AocUtils: Use URI.create().toURL() instead of URL constructor, as this will be deprecated with java 20